--- a/apputveckling/pom.xml
+++ b/apputveckling/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>jcommon</artifactId>
             <version>1.0.24</version>
         </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>8.0.28</version>
+      </dependency>
   </dependencies>
 
   <build>
