--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,2 @@
 
-.idea/encodings.xml
-.idea/gitarrworkshop.iml
-.idea/jarRepositories.xml
-.idea/shelf/Uncommitted_changes_before_Checkout_at_2023-11-28,_12_05_\[Changes\]/shelved.patch
-.idea/shelf/Uncommitted_changes_before_Checkout_at_2023-11-28,_12_05_\[Changes\]1/shelved.patch
-.idea/shelf/Uncommitted_changes_before_Checkout_at_2023-11-28__12_05__Changes_.xml
-.idea/shelf/Uncommitted_changes_before_Checkout_at_2023-11-28__12_05__Changes_1.xml
+.idea
