--- a/apputveckling/.gitignore
+++ b/apputveckling/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea/artifacts
+.idea/vcs.xml
+.idea/workspace.xml
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
