--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,1 @@
-/.idea/ant.xml
-/.idea/encodings.xml
-/.idea/gitarrworkshop.iml
-/.idea/jarRepositories.xml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/workspace.xml
+/.idea/
