--- a/apputveckling/pom.xml
+++ b/apputveckling/pom.xml
@@ -57,6 +57,21 @@
           <version>12.0.0</version>
           <classifier>jakarta</classifier>
       </dependency>
+      <dependency>
+          <groupId>org.sonatype.sisu</groupId>
+          <artifactId>sisu-guice</artifactId>
+          <version>3.2.3</version>
+      </dependency>
+      <dependency>
+          <groupId>javax.inject</groupId>
+          <artifactId>javax.inject</artifactId>
+          <version>1.4.2</version>
+      </dependency>
+      <dependency>
+          <groupId>jakarta.platform</groupId>
+          <artifactId>jakarta.jakartaee-web-api</artifactId>
+          <version>10.0.0</version>
+      </dependency>
   </dependencies>
 
   <build>
